--- a/TesteImposto/App.config
+++ b/TesteImposto/App.config
@@ -7,6 +7,6 @@
     <add key="pathXML" value="C:\Users\Desenvolvimento\Downloads\net-lab-master\net-lab-master\TesteImposto\XML" />
   </appSettings>
   <connectionStrings>
-    <add name="BancoDeDados" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Desenvolvimento\Downloads\net-lab-master\net-lab-master\TesteImposto\Imposto.Core\App_Data\Teste.mdf;Integrated Security=True" />
+    <add name="BancoDeDados" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Desenvolvimento\Downloads\net-lab-master\net-lab-master\TesteImposto\Imposto.Data\App_Data\Teste.mdf;Integrated Security=True" />
   </connectionStrings>
 </configuration>
