--- a/Imposto.Test/Imposto.Test.csproj
+++ b/Imposto.Test/Imposto.Test.csproj
@@ -49,10 +49,11 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MockNotaFiscal.cs" />
+    <Compile Include="Mocks.cs" />
+    <Compile Include="TestImpostoICMS.cs" />
     <Compile Include="TestPersistencia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestImpostoCfop.cs" />
+    <Compile Include="TestCfop.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -62,6 +63,10 @@
     <ProjectReference Include="..\Imposto.Core\Imposto.Core.csproj">
       <Project>{2339c0b3-1e95-4cd3-bfba-64b377857016}</Project>
       <Name>Imposto.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Imposto.Domain\Imposto.Domain.csproj">
+      <Project>{548DF817-B0F1-4C3E-A178-7A2538C4FF9C}</Project>
+      <Name>Imposto.Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
