- Adicionado novos casos de testes

--- a/Imposto.Test/Imposto.Test.csproj
+++ b/Imposto.Test/Imposto.Test.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Mocks.cs" />
+    <Compile Include="TestImpostoIPI.cs" />
     <Compile Include="TestImpostoICMS.cs" />
     <Compile Include="TestPersistencia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
